# agents-lib

./: .gitignore  README.md  config.ini.example  config.toml.example  mcp_servers_config.json.example  pyproject.toml
src/: globals.py  main.py  main_google.py
src/agents/: __init__.py  db_agent.py  test_agent.py  weather_agent.py  web_search_agent.py
src/llm/: __init__.py  core.py
src/llms/: __init__.py  anthropic_llm.py  base.py  google_llm.py
src/llms/providers/: anthropic.py  google.py
src/mcp/: server_config.py
src/mcp/servers/: server.py
src/models/: __init__.py  db_search.py  web_search.py
