[project]
name = "agent_lib"
version = "0.0.1"
authors = [
    { name = "Fabio Pancino", email = "pancinofabio@gmail.com" },
]
description = "inference_application"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi[standard]",
    "fastapi==0.112.1",
    "uvicorn==0.30.6",
    "pydantic==2.9.*",
    "httpx",
    "google-cloud-secret-manager==2.20.2",
    "mistralai==1.5.*",
    "google-cloud-aiplatform==1.75.*",
    "llama-index",
    "google-generativeai",
    "llama-index-llms-google-genai",
    "llama-index-llms-anthropic",
    "llama-index-tools-duckduckgo",
    "requests",
    "beautifulsoup4",
    "langwatch"
]

[project.optional-dependencies]
dev = [
    "ruff",
    "types-pytz",
    "types-requests",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "src",
    "src.models",
    "src.agents",
    "src.controller",
    "src.llms"
]