[project]
name = "agent_lib"
version = "0.0.2"
authors = [
    { name = "Fabio Pancino", email = "pancinofabio@gmail.com" },
]
description = "agent_lib"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "toml==0.10.*",
    "requests==2.32.*",
    "beautifulsoup4==4.13.*",
    "mistralai==1.5.*",
    "anthropic",
    "google-generativeai",
    "llama-index==0.12.*",
    "llama-index-llms-google-genai==0.2.*",
    "llama-index-llms-anthropic==0.7.*",
    "llama-index-tools-duckduckgo==0.3.*",
    "langwatch==0.2.*",
    "mcp-python==0.1.*",
    "llama-index-tools-mcp==0.2.*"
]

[project.optional-dependencies]
dev = [
    "ruff",
    "types-pytz",
    "types-requests",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "src",
    "src.models",
    "src.agents",
    "src.controller",
    "src.llm",
    "src.mcp"
]